--- a/index.css
+++ b/index.css
@@ -107,3 +107,25 @@ body{
 .counter-buttons > button:hover{
     background-color: rgb(237, 237, 58);
 }
+
+a{
+    text-decoration: none;
+    color: wheat;
+}
+
+.name-div{
+    margin: 30px;
+    padding: 20px;
+}
+
+.name-input{
+    width: 200px;
+    height: 30px;
+    border: 1px solid black;
+}
+
+.name-btn{
+    height: 35px;
+    margin-left: 20px;
+    background-color: wheat;
+}
